tests/NormalTests/paczka1/fuzzy1/96619378.err
Error in line 1: 3nS3F A12 62,1
Error in line 3: hZ0SMYPOc9 A297 52,0
Error in line 13: AvTcR A12 27,62
Error in line 11: A297 A297 0,0
Error in line 19: AvTcR S128 36,7
Error in line 34: 3nS3F A12 59,0
